<resources>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="settings">Settings</string>
    <string name="app_name">MacrosManager</string>
    <string name="daily_activity_level">Daily Activity Level</string>
    <string name="very_light">Very Light</string>
    <string name="light">Light</string>
    <string name="moderate">Moderate</string>
    <string name="heavy">Heavy</string>
    <string name="very_heavy">Very Heavy</string>
    <string name="physical_activity_lifestyle">Physical Activity Lifestyle</string>
    <string name="sedentary_adult">Sedentary Adult</string>
    <string name="adult_recreational_exerciser">Adult Recreational Exerciser</string>
    <string name="adult_competitive_athlete">Adult Competitive Athlete</string>
    <string name="adult_building_muscle">Adult Building Muscle</string>
    <string name="dieting_athlete">Dieting Athlete</string>
    <string name="teen_growing_athlete">Teenage Growing Athlete</string>
    <string name="preferred_fat">Preferred Fat Percentage in Diet</string>
    <string name="goal">Goal</string>
    <string name="burn_suggested">Burn Fat Suggested (-15%)</string>
    <string name="burn_aggressive">Burn Fat Aggressive (-20%)</string>
    <string name="burn_reckless">Burn Fat Reckless (-25%)</string>
    <string name="maintain">Maintain (+/-0%)</string>
    <string name="build_suggested">Build Muscle Suggested (+5%)</string>
    <string name="build_aggressive">Build Muscle Aggressive (+10%)</string>
    <string name="build_reckless">Build Muscle Reckless (+15%)</string>
    <string name="calc">Calculate</string>
    <string name="calories">Calories</string>
    <string name="carbs">Carbs</string>
    <string name="fat">Fat</string>
    <string name="protein">Protein</string>
    <string name="empty_macros">0g</string>
    <string name="save">Save</string>
    <string name="set_birth_date">Tap to set your birth month and year.</string>
    <string name="grams">g</string>
    <string name="sign_up_description">Sign up to get access to your data across devices, and receive other features.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="height_measurement">Height Measurement</string>
    <string name="weight_measurement">Weight Measurement</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="stone">Stone</string>
    <string name="birth_month_year">Birth Month and Year</string>
    <string name="servings_size">Serving Size</string>
    <string name="meal_name">Meal Name</string>
    <string name="height">Height</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="centimeters">Centimeters</string>
    <string name="ft">ft</string>
    <string name="in">in</string>
    <string name="cm">cm</string>
    <string name="weight">Weight</string>
    <string name="pounds">Pounds</string>
    <string name="lbs">lbs</string>
    <string name="kilograms">Kilograms</string>
    <string name="daily_activity_level_explanation">Very Light: Sitting, little walking, little other activities in a day\n\nLight: Typing, lab work, some walking in a day\n\nModerate: Light manual labor job with 1–2 hours weight training or other training\n\nHeavy: Heavy manual labor job with 2–4 hours weight training or sports\n\nVery Heavy: Moderate or heavy for 8 hours or more a day plus 2–4 hours intense training</string>
    <string name="diet_fat_percent">Diet Fat Percent</string>
    <string name="twenty_five_percent">25%</string>
    <string name="thirty_percent">30%</string>
    <string name="thirty_five_percent">35%</string>
    <string name="custom">Custom</string>
    <string name="percent">Percent</string>
    <string name="fat_percent_explanation">18: Please stay in the 25–35% range for best results.\n\n19+: Please stay in the 20–35% range for best results.\n\nEnjoy any percentage regardless of what your current goal is as long as you stay within the suggested ranges.\n\nNote: Try to keep saturated fats under 10%.</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="height_error">Height Error</string>
    <string name="height_entry_range_error">You have entered a height taller or shorter than the respective person that ever lived. Please go collect your award, or enter a valid height.</string>
    <string name="height_entry_errors">Please enter a valid number for both height entries.</string>
    <string name="height_entry_error">Please enter a valid number for your height.</string>
    <string name="weight_entry_range_error">You have entered a weight heavier or lighter than the respective person that ever lived. Please go collect your award, or enter a valid weight.</string>
    <string name="weight_error">Weight Error</string>
    <string name="weight_entry_error">Please enter a valid number for your weight.</string>
    <string name="weight_entry_errors">Please enter a valid number for both weight entries.</string>
    <string name="custom_fat_error">Custom Fat Percent Error</string>
    <string name="custom_fat_entry_error">Please enter a valid fat percent for your diet, or select one of the other options.</string>
    <string name="custom_fat_entry_range_error">Please enter a number within the correct range.</string>
    <string name="goal_error">Goal Error</string>
    <string name="birth_month_year_entry">%1$02d/%2$d</string>
    <string name="settings_error">Settings Error</string>
    <string name="settings_error_description">Please visit the settings page first to fill out some information about yourself for use in calculations.</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="create_account">Create Account</string>
    <string name="create_account_description">Would you like to create an account to store your settings and macros across devices?</string>
    <string name="no_thanks">No Thanks</string>
    <string name="birth_info_error">Birth Info Error</string>
    <string name="birth_info_error_description">Please choose a birth month and year.</string>
    <string name="valid_email_error">Please enter a valid email.</string>
    <string name="password_error">Please enter a password.</string>
    <string name="password_confirm_error">Please enter confirm your password.</string>
    <string name="password_match_error">Passwords do not match. Please try again.</string>
    <string name="account_created">Account created successfully.</string>
    <string name="account_creation_failed">Account creation failed. Please try again.</string>
    <string name="firestore_save_data_error">Save Data Issue</string>
    <string name="firestore_save_data_error_description">Some data was saved to your device, but not to your account. Please try to save again or try again later.</string>
    <string name="retry">Retry</string>
    <string name="macros_daily">%1$.1f/%2$d</string>
    <string name="macros_daily_empty">-/-</string>
    <string name="servings">Servings</string>
    <string name="delete_meal">Remove Meal</string>
    <string name="macros">Macros</string>
    <string name="calculator">Calculator</string>
    <string name="set">Set</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_description">Deleting your account will not delete your data stored on the device, but data will no longer be updated across devices.</string>
    <string name="delete">Delete</string>
    <string name="user_account_deleted">User account was successfully deleted.</string>
    <string name="user_account_delete_error">There was an issue deleting your account. Please try again later.</string>
    <string name="login_failed">Login Failed</string>
    <string name="login_failed_description">Your login failed. Please try again later.</string>
    <string name="add_meal">Add Meal</string>
    <string name="edit_meal">Edit Meal</string>
    <string name="meal_card_calories">Calories: %1$.2f</string>
    <string name="meal_card_carbs">Carbs: %1$.2f</string>
    <string name="meal_card_fat">Fat: %1$.2f</string>
    <string name="meal_card_protein">Protein: %1$.2f</string>
    <string name="meal_card_servings">Servings: %1$.2f</string>

    <string name="admob_id">ca-app-pub-6601965971959563~1619744217</string>
</resources>
