<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cuinsolutions.macrosmanager.SettingsActivity">

    <data>
        <import type="android.view.View.OnClickListener" />

        <variable
            name="listener"
            type="OnClickListener" />

        <variable
            name="genderId"
            type="Integer" />

        <variable
            name="weightId"
            type="Integer" />

        <variable
            name="heightId"
            type="Integer" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/settings_gender_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_standard"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginTop="@dimen/margin_standard"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_gender_header"
                android:checkedButton="@{genderId}">

                <RadioButton
                    android:id="@+id/settings_radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    style="@style/SettingsRadioButton" />

                <RadioButton
                    android:id="@+id/settings_radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    style="@style/SettingsRadioButton" />
            </RadioGroup>

            <TextView
                android:id="@+id/settings_gender_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_standard"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginTop="@dimen/margin_standard"
                android:text="@string/gender"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_birth_date"
                style="@style/SettingsHeader" />

            <TextView
                android:id="@+id/settings_height_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_standard"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginTop="@dimen/margin_standard"
                android:text="@string/height_measurement"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_weight_radio_group"
                style="@style/SettingsHeader" />

            <TextView
                android:id="@+id/settings_weight_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_standard"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginTop="@dimen/margin_standard"
                android:text="@string/weight_measurement"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_gender_radio_group"
                style="@style/SettingsHeader" />

            <RadioGroup
                android:id="@+id/settings_height_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_standard"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginTop="@dimen/margin_standard"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_height_header"
                android:checkedButton="@{heightId}">

                <RadioButton
                    android:id="@+id/settings_height_imperial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/imperial"
                    style="@style/SettingsRadioButton" />

                <RadioButton
                    android:id="@+id/settings_height_metric"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/metric"
                    style="@style/SettingsRadioButton" />

            </RadioGroup>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/settings_save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/margin_standard"
                android:layout_marginEnd="@dimen/margin_standard"
                android:text="@string/save"
                style="@style/ExtendedFab"
                android:onClick="@{listener}" />

            <RadioGroup
                android:id="@+id/settings_weight_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_weight_header"
                android:checkedButton="@{weightId}">

                <RadioButton
                    android:id="@+id/settings_weight_imperial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/imperial"
                    style="@style/SettingsRadioButton" />

                <RadioButton
                    android:id="@+id/settings_weight_metric"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/metric"
                    style="@style/SettingsRadioButton" />

                <RadioButton
                    android:id="@+id/settings_weight_stone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stone"
                    style="@style/SettingsRadioButton" />
            </RadioGroup>

            <TextView
                android:id="@+id/settings_birthday_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_standard"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginTop="@dimen/margin_standard"
                android:text="@string/birthday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/SettingsHeader" />

            <TextView
                android:id="@+id/settings_birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_standard"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginTop="@dimen/margin_standard"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_birthday_header"
                android:onClick="@{listener}" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
