<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cuinsolutions.macrosmanager.AddMealActivity">

    <data>
        <import type="android.view.View.OnClickListener" />

        <variable
            name="listener"
            type="OnClickListener" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_meal_calories_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_meal_name_layout"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginEnd="@dimen/margin_standard"
                android:layout_marginTop="@dimen/margin_standard">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_meal_calories_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/notosansui_regular"
                    android:hint="@string/calories"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_meal_carbs_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_meal_calories_layout"
                android:layout_marginEnd="@dimen/margin_standard"
                android:layout_marginTop="@dimen/margin_standard"
                android:layout_marginStart="@dimen/margin_standard">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_meal_carbs_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/notosansui_regular"
                    android:hint="@string/carbs"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_meal_fat_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_meal_carbs_layout"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginEnd="@dimen/margin_standard"
                android:layout_marginTop="@dimen/margin_standard">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_meal_fat_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/notosansui_regular"
                    android:hint="@string/fat"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_meal_protein_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_meal_fat_layout"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="@dimen/margin_standard"
                android:layout_marginTop="@dimen/margin_standard"
                android:layout_marginStart="@dimen/margin_standard">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_meal_protein_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/notosansui_regular"
                    android:hint="@string/protein"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_meal_serving_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_meal_protein_layout"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="@dimen/margin_standard"
                android:layout_marginTop="@dimen/margin_standard"
                android:layout_marginStart="@dimen/margin_standard">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_meal_serving_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/notosansui_regular"
                    android:hint="@string/servings_size"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_meal_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="@dimen/margin_standard"
                android:layout_marginTop="@dimen/margin_standard"
                android:layout_marginStart="@dimen/margin_standard">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_meal_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/notosansui_regular"
                    android:hint="@string/meal_name"
                    android:inputType="textCapSentences" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/saveMealFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_standard"
                android:layout_marginEnd="@dimen/margin_standard"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/save"
                style="@style/ExtendedFab"
                android:onClick="@{listener}" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
